<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_weixin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fcfcfc"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="姓名"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/editname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/Resume_name"
            android:textSize="20sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="性别"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/editgender"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/Resume_gender"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"

        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="籍贯"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/originplace"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/originplace"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"

        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="联系地址"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/editaddress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/address"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"

        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="出生年月"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/editbirthday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/birthday"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="学历"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/editphonenumber"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/education"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"

        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="联系方式"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/editnumber"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/phonenumber"
            android:textSize="20sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"

        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="e-mail"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:id="@+id/editemail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:textSize="20sp" />
        

    </LinearLayout>

   	<!--TextView 
   	    android:layout_width="fill_parent"
   	    android:layout_height="0dp"
   	    android:layout_weight="1"
   	    android:gravity="center"
   	    android:text="聊天页面 !"
   	    android:textColor="#000000"
   	    android:textSize="30sp"
   	    /-->

</LinearLayout>