<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_weixin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fcfcfc"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="公司/部门"
            android:textSize="20sp"
            android:textColor="#990033" />
       <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/company1"
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal" >
       
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="工作内容"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/response1"
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="公司/部门"
            android:textSize="20sp"
            android:textColor="#990033" />
       <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/company2"
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal" >
       
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="工作内容"
            android:textSize="20sp"
            android:textColor="#990033" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/response2"
            android:textSize="20sp" />
        
    </LinearLayout>
    
    
    
        
    
    
   	<!--TextView 
   	    android:layout_width="fill_parent"
   	    android:layout_height="0dp"
   	    android:layout_weight="1"
   	    android:gravity="center"
   	    android:text="发现页面!"
   	    android:textColor="#000000"
   	    android:textSize="30sp"
   	    /-->

    

</LinearLayout>